fixed too big icons issue

--- a/static/sass/config/_variables.sass
+++ b/static/sass/config/_variables.sass
@@ -34,6 +34,9 @@ $font-weight-bolder: 700
   line-height: (22/18)
   font-family: $font-family-sans-serif
 
+@mixin textS
+  +text
+  font-size: $text-size-s
 
 @mixin textM
   +text
