--- a/static/sass/modules/_post.sass
+++ b/static/sass/modules/_post.sass
@@ -29,6 +29,8 @@ $details-vert-offset: 20px
 $details-hori-offset: $details-size/2
 
 .Post-details
+  +textM
+
   position: absolute
   top: -$details-vert-offset
   right: -$details-size
@@ -62,7 +64,6 @@ $details-hori-offset: $details-size/2
   padding-top: $details-vert-offset/2
   padding-left: 2*$details-vert-offset
   
-  font-size: $text-size-l
   text-align: right
 
   a
